--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
+    <color name="negative_balance">#F44336</color>
+    <color name="positive_balance">#4CAF50</color>
+    <color name="neutral_balance">#3F51B5</color>
 </resources>
